# onlain_magazin

./: alembic.ini  main.py  main_test.py  pyproject.toml
bot/routers/: basic.py
migration/: env.py
migration/versions/: 1a4580b80c8a_сообщение_о_том_что_мы_сделали.py  2a022997ab4a_.py  38d30be6fa9c_сообщение_о_том_что_мы_сделали.py  3a2b02ace580_fix_relationship_between_cart_and_cart_.py  4347cf44ba75_fix_relationship_between_cart_and_cart_.py  648b28211d23_.py  67a1f38b8aae_.py  69619967a2ae_fix_relationship_between_cart_and_cart_.py  8d494bedffd8_.py  b312b71582a9_fix_relationship_between_cart_and_cart_.py  bc313a7c0156_сообщение_о_том_что_мы_сделали.py  daa503d05ced_fix_relationship_between_cart_and_cart_.py  df72085ab4b0_fix_relationship_between_cart_and_cart_.py  ff11b0f311a4_fix_relationship_between_cart_and_cart_.py
models/: __init__.py  cart.py  cartItem.py  category.py  enums.py  order.py  orderitem.py  product.py  review.py  user.py
settings/: .env  .env.example  config.py  database.py
